# simplefs

./: .gitignore  CMakeLists.txt  README.txt  consts.h  filesystem.c  filesystem.h  main.c  patheval.c  patheval.h  sem.c  sem.h  simplefs.c  simplefs.h  unlink_sem.c
sem/: proc1.c  proc2.c  proc3.c
tests/: main.c  multiproc_tests.c  simplefs_chmode.h  simplefs_mkdir.h  simplefs_open.h  simplefs_read.h  simplefs_unlink.h  simplefs_write.h  utils.h
tests/test-files/: file01  file02
