cmake_minimum_required(VERSION 3.13)
project(simplefs)

set(CMAKE_C_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_executable(simplefs main.c simplefs.h consts.h simplefs.c filesystem.c filesystem.h patheval.c patheval.h)
add_executable(proc1 simplefs.h consts.h simplefs.c filesystem.c filesystem.h patheval.c patheval.h sem/proc1.c)
add_executable(proc2 simplefs.h consts.h simplefs.c filesystem.c filesystem.h patheval.c patheval.h sem/proc2.c)
add_executable(proc3 simplefs.h consts.h simplefs.c filesystem.c filesystem.h patheval.c patheval.h sem/proc3.c)
target_link_libraries(simplefs Threads::Threads m)
target_link_libraries(proc1 Threads::Threads)
target_link_libraries(proc2 Threads::Threads)
target_link_libraries(proc3 Threads::Threads)
